--- a/k8s/nginx/Jenkinsfile
+++ b/k8s/nginx/Jenkinsfile
@@ -19,6 +19,7 @@ pipeline {
         stage('Deploy image to cluster') {
             steps {
                 sh 'oc login -u bryan -p $OC_CREDS $OC_API_ADDR --insecure-skip-tls-verify'
+                sh 'oc config set-context --current --namespace apps'
                 sh 'oc apply -f k8s/nginx/k8s'
             }
         }
