--- a/k8s/nginx/Dockerfile
+++ b/k8s/nginx/Dockerfile
@@ -1,3 +1,3 @@
 FROM nginx
 
-COPY ./k8s/nginx/site-content/index.html /usr/share/nginx/html/index.html
+COPY /home/azureuser/jenkins/workspace/nginx/k8s/nginx/site-content/index.html /usr/share/nginx/html/index.html
