--- a/k8s/apps/api-gateway/k8s/api-gateway/values.yaml
+++ b/k8s/apps/api-gateway/k8s/api-gateway/values.yaml
@@ -3,13 +3,13 @@ replicaCount: 1
 web:
   name: api-gateway
   image:
-    repository: docker.apps.blierop.com/api-gateway
+    repository: docker.apps.openshift-1.blierop.com/api-gateway
     tag: latest
     pullPolicy: IfNotPresent
   enviroment: prod
   ingress:
     issuer: letsencrypt-prod
-    domain: example.apps.blierop.com
+    domain: example.apps.openshift-1.blierop.com
     secretName: cg-demo-com-tls
     path: /
     serviceMesh:
