--- a/k8s/jenkins/templates/route.yaml
+++ b/k8s/jenkins/templates/route.yaml
@@ -6,7 +6,7 @@ metadata:
   name: jenkins
   namespace: cicd
 spec:
-  host: jenkins.apps.blierop.com
+  host: jenkins.apps.openshift-1.blierop.com
   port:
     targetPort: 8080
   to:
