--- a/k8s/nexus/templates/route-docker.yaml
+++ b/k8s/nexus/templates/route-docker.yaml
@@ -5,7 +5,7 @@ metadata:
     app: nexus
   name: docker
 spec:
-  host: docker.apps.blierop.com
+  host: docker.apps.openshift-1.blierop.com
   port:
     targetPort: 8082
   to:
