--- a/k8s/nginx/k8s/ingress.yaml
+++ b/k8s/nginx/k8s/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: nginx
 spec:
   rules:
-  - host: nginx.apps.blierop.com
+  - host: nginx.apps.openshift-1.blierop.com
     http:
       paths:
       - backend:
@@ -16,5 +16,5 @@ spec:
         pathType: Exact
   tls:
   - hosts:
-    - nginx.apps.blierop.com
+    - nginx.apps.openshift-1.blierop.com
     secretName: nginx-cert
