--- a/4-k8s-apps/5-apps/api-gateway/Jenkinsfile
+++ b/4-k8s-apps/5-apps/api-gateway/Jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
 
         stage('Deploy image to cluster') {
             steps {
-                sh 'oc login -u bryan -p $OC_CREDS $OC_API_ADDR --insecure-skip-tls-verify'
+                sh 'oc login -u demo-admin -p $OC_CREDS $OC_API_ADDR --insecure-skip-tls-verify'
                 sh 'oc config set-context --current --namespace apps-istio'
                 sh 'helm upgrade ${APP_NAME} 4-k8s-apps/5-apps/${APP_NAME}/k8s/${APP_NAME} --set web.image.tag=${BUILD_NUMBER} --set image.repository=${IMAGE_NAME} --install'
 
