--- a/4-k8s-apps/5-apps/backend-service/k8s/backend-service/values.yaml
+++ b/4-k8s-apps/5-apps/backend-service/k8s/backend-service/values.yaml
@@ -17,8 +17,7 @@ basePath: /api/example
 
 podAnnotations: {}
 
-podSecurityContext:
-  runAsUser: 1000
+podSecurityContext: {}
 # fsGroup: 2000
 
 securityContext:
